# drf_api_permissions_postgres

./: README.md  pyproject.toml
things/: db.sqlite3  docker-compose.yml  pyproject.toml
things/home/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
things/home/migrations/: 0001_initial.py
things/things/: settings.py  urls.py
